--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Ich bin ein fröhlicher Mensch, im Normalfall kannst du mit mir auch über alles lachen, <br/>
-      mir ist es sehr wichtig, eine gute Atmosphöre in meinem Umfeld zu haben.
+      mir ist es sehr wichtig, eine gute Atmosphäre in meinem Umfeld zu haben.
       Ich mag es, unter Leuten und in guter Gesellschaft zu sein.<br />
       In meiner Freizeit gefällt es mir, am PC zu spielen, draußen spazieren zu gehen und ab und zu mir ein neues interessantes Buch zu lesen
       Ich bin sehr glücklich, neues lernen zu dürfen, was sich auch bei meiner Motivation deutlich bemerkbar macht.<br />
