--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Chatzissavidis Konstantinos
-title: Umschüler als Fachinformatiker für Systemintegration-Didact
+title: Umschüler als Fachinformatiker für Systemintegration - Didact kaufmän. Berufsbildungsges. mbH, München
 email: kchatzissavidis@gmail.com
 # email_title: Email (Email title override)
 #phone:
